# zennode

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  coderabbit.yaml  main.py  promptfoo.yaml  promptfooconfig.yaml  pyproject.toml  redteam.yaml  setup.py
.github/workflows/: ci.yml
docs/: index.html
scripts/: redteam_multiproc.py
src/zennode/app/: clipboard.py  menubar.py  recorder.py
src/zennode/cli/: main.py
src/zennode/core/: interfaces.py  models.py
src/zennode/infrastructure/: analytics.py  audio.py  config.py  llm.py  obsidian.py  permissions.py  pii.py
src/zennode/prompts/: AUDIT_CRITIQUE.md  CONTEXT_PRECHECK.md  MASTERY_SYNTHESIS.md  QUIZ_GENERATION.md  REALITY_CHECK.md  system_prompts.py
src/zennode/prompts/profiles/: zennode_adhd_skim.md  zennode_audhd_deep_dive.md  zennode_dyslexic_visual.md  zennode_socratic_mentor.md
src/zennode/workflows/: graph.py  nodes.py
